fix wierd resize bug on mobile

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -63,6 +63,10 @@ footer {
   font-size:1.25em;
 }
 
+.nav-glyphicon{
+  font-size:1.25em;
+}
+
 
 .navbar-brand a{
   color:white;
